# searchinform-killer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
scripts/: build-debug.bat  build-release.bat  format.bat  run-tests.bat  tidy.bat
src/: Application.cpp  Application.hpp  CommandLine.cpp  CommandLine.hpp  ExitCode.hpp  ProcessFilter.cpp  ProcessFilter.hpp  ProcessInfo.hpp  ProcessTerminator.cpp  ProcessTerminator.hpp  UniqueHandle.hpp  WildcardMatcher.cpp  WildcardMatcher.hpp  WinProcessEnumerator.cpp  WinProcessEnumerator.hpp  main.cpp
tests/: CommandLineTests.cpp  ProcessFilterTests.cpp  WildcardMatcherTests.cpp
